# medgemma-fine-tuning

./: DATASET_CREATION.md  IMAGE_TEXT_TO_TEXT_TUNER_DOCUMENTATION.md  README.md  TUNING_DOCUMENTATION.md  medgemma-inference-v3.py  tuner.py
image-text-to-text-tuner/: evaluator.py  gguf_conversion.py  medgemma_tuner_example.py  pyproject.toml  requirements.txt
medgemma-fine-tuning-code/: medgemma-finetuning-v5.py  model_eval_v1.py
